# zebras

./: CROSS.toml  Cargo.toml  LIBRARY.md  README.md  Trunk.toml  index.html  justfile  zebras-4fbdd8dde8c4e2d0.js
.github/workflows/: pages.yml  rust.yml
examples/: query_status.rs  simple_label.rs
src/: app.rs  labelary.rs  lib.rs  main.rs  printer.rs  printer_status.rs  zpl.rs
