[package]
name = "zebras"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.29"
egui = "0.29"
image = "0.25"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
local-ip-address = "0.6"
arboard = "3.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest-wasm = "0.11"
wasm-bindgen-futures = "0.4"
